/*
 * $Id: ChangeLog,v 1.2832 2004/04/25 23:50:11 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-04-26 16:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/gtwvt/gtwvt.c
    ! remove __XCC__ defines

2004-04-26 07:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/gtwvt/gtwvt.c
    ! add definition of IDC_HAND to allow compilation when WINVER < 0x0500

2004-04-25 18:20 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * contrib/winprn/tprint.prg
    ! major changes on font data collecting routine to permit usage of
      TPrint class under XCC (previously GPF when executing callback)
      (This is a very rough fix though. XCC fails to execute callback
       function "the normal way" while GCC, BCC, MSVC and OW are doing OK)

  + source/rtl/hbmd5.c
    + md5 digest routine for a given string or file by: Dmitry V. Korzhov.

  + tests/md5file.prg
  + tests/md5test.prg
    + test program for hb_md5 routine.

    /*
    Useful for:
    1. Password encryption
    2. File indentification
    3. Indexing long character field ( index on HB_MD5( field  ) ... )
    4. etc.
    Note: I know we are in release freeze but this particular routine won't
          affect anything and it is worthy to have it under RTL.
    */

  * hrbdll.bc
  * hrbdll.vc
  * hrbdll.wc
  * makefile.bc
  * makefile.vc
  * makefile.nt
  * makefile.wc
    + add hbmd5.obj file dependency

2004-04-25 12:55 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/gtwvt/gtwvt.c
    + Wvt_CreatePopupMenu()
      Returns handle to the newly created popup menu. The menu thus created can be populated
      with prompts and submenus through Wvt_AppendMenu().

    + Wvt_SetPopupMenu() 
      Returns or sets the context menu available through K_RBUTTONDN (See Below). In no menu 