@@ -1,5 +1,5 @@
 #
-# $Id: Makefile,v 1.3 2002/05/08 08:27:43 tomazzupan Exp $
+# $Id: Makefile,v 1.1 2003/03/29 22:38:10 lculik Exp $
 #
 
 ROOT = ../../
@@ -10,6 +10,7 @@ C_SOURCES=\
 PRG_SOURCES=\
 	todbc.prg\
 	browodbc.prg\
+	hdo_odbc.prg
 
 LIBNAME=hbodbc
 
